@@ -38,11 +38,13 @@ public class SystemInfoTest extends CustomEnvVariables {
         isWindows = SystemInfo.isWindows(systemInfo.getPlatform());
     }
 
-
     @Test
     void testHostnameDiscoveryThroughCommand() {
         String hostname = SystemInfo.discoverHostnameThroughCommand(isWindows, 300);
-        assertThat(hostname).isNotNull();
+        assertThat(hostname).isNotNull().isNotEmpty();
+        assertThat(hostname)
+            .describedAs("hostname command output should be normalized")
+            .isEqualTo(hostname.trim());
     }
 
     @Test
@@ -61,7 +63,7 @@ public class SystemInfoTest extends CustomEnvVariables {
 
     @Test
     void testHostnameDiscoveryFallbackThroughInetAddress() throws UnknownHostException {
-        String expectedHostname = InetAddress.getLocalHost().getHostName();
+        String expectedHostname = SystemInfo.removeDomain(InetAddress.getLocalHost().getHostName());
 
         Map<String, String> customEnvVariables = new HashMap<>();
         if (isWindows) {
